--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,15 @@
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Vazir";
+}
 .App {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 0.5rem;
+  gap: 1rem;
 }
 
 .App-logo {
