--- a/src/components/common/Input/input.module.css
+++ b/src/components/common/Input/input.module.css
@@ -7,17 +7,22 @@
   font-size: 1rem;
 }
 .inputControl div {
-    display: flex;
-    gap: 25%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .inputControl input {
+  width: 95%;
   outline: none;
   border: none;
   border-radius: 4px;
-  box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: 1px 1px 12px -8px rgba(0, 0, 0, 0.75);
   padding: 0.4rem;
   font-size: 1rem;
 }
 .errorText {
-    color: red;
+  display: flex;
+  justify-content: flex-end;
+  color: red;
+  font-size: 0.8rem;
 }
